--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     
                     <div class="mt-8 sm:max-w-lg sm:mx-auto sm:text-center lg:text-left lg:mx-0">
                         <div class="flex flex-col sm:flex-row gap-4">
-                            <a href="#contact" class="cta-button bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors text-center">
+                            <a href="#contact" class="cta-button bg-blue-600 text-white px-8 py-4 rounded-lg font-semibold hover:bg-blue-700 transition-colors text-center animate-pulse-subtle">
                                 <i class="fas fa-rocket mr-2"></i>Démarrer mon projet
                             </a>
                             <a href="#services" class="secondary-button border-2 border-blue-600 text-blue-600 px-8 py-4 rounded-lg font-semibold hover:bg-blue-50 transition-colors text-center">
@@ -107,17 +107,17 @@
                     </div>
                     
                     <!-- Stats -->
-                    <div class="mt-12 grid grid-cols-3 gap-8 text-center lg:text-left">
-                        <div>
-                            <div class="text-2xl font-bold text-blue-600">98%</div>
+                    <div class="mt-12 grid grid-cols-3 gap-8 text-center lg:text-left stats">
+                        <div class="stat-item opacity-0 translate-y-4">
+                            <div class="text-2xl font-bold text-blue-600 stat-number" data-target="98">0%</div>
                             <div class="text-sm text-gray-600">Satisfaction client</div>
                         </div>
-                        <div>
-                            <div class="text-2xl font-bold text-blue-600">40%</div>
+                        <div class="stat-item opacity-0 translate-y-4">
+                            <div class="text-2xl font-bold text-blue-600 stat-number" data-target="40">0%</div>
                             <div class="text-sm text-gray-600">Gain de productivité</div>
                         </div>
-                        <div>
-                            <div class="text-2xl font-bold text-blue-600">24h</div>
+                        <div class="stat-item opacity-0 translate-y-4">
+                            <div class="text-2xl font-bold text-blue-600 stat-number" data-target="24">0h</div>
                             <div class="text-sm text-gray-600">Délai de réponse</div>
                         </div>
                     </div>
